--- a/html/thema/css/10.css
+++ b/html/thema/css/10.css
@@ -1,4 +1,7 @@
-.themaWrap * { position: relative; font-family: 'GmarketSans','Noto Sans KR' !important; font-weight: 500; line-height: 1.3; } 
+html { overflow: initial; } 
+.not_scroll { width: 100%; height: 100%; overflow: hidden; } 
+.themaWrap * { font-family: 'GmarketSans','Noto Sans KR' !important; font-weight: 500; line-height: 1.3; } 
+.themaWrap { position: relative; } 
 .themaWrap .innerSection { max-width: 1260px; width: calc(100% - 20px); margin: 0 auto; padding: 0; } 
 .gBold { font-weight: 700; } 
 .themaWrap .mainVisual { background-image: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20241008/main_bg01.png), url(https://chaebonggi.github.io/jobabamain/html/thema/images/20241008/main_bg02.png); background-repeat: no-repeat; background-position: center top, center bottom 50px; background-color: #fff; } 
