--- a/html/page/css/exhb.css
+++ b/html/page/css/exhb.css
@@ -272,6 +272,58 @@
 .exhb_sub .des_open .item .top .cert,
 .exhb_sub .des_open .item .bottom .cert{width: calc(100% - 200px);}
 
+/* s:2024.10.22 온라인 채용관 css 추가 */
+.exhb_wrap { max-width: 1920px; margin: 0 auto; font-family: 'Noto Sans KR'; font-weight: 500; } 
+.exhb_remain .exhb_reheader { background: url(../images/exhb/main_bg.jpg) bottom center no-repeat; background-size: cover; } 
+.exhb_remain .exhb_reheader .tit_wrap { padding: 120px 0 90px; position: relative; text-align: center; } 
+.exhb_remain .exhb_reheader .tit_wrap::after { content: ''; width: 1123px; height: 212px; position: absolute; top: 40px; left: 50px; background: url(../images/exhb/main_item01.png) no-repeat; background-size: contain; } 
+.exhb_remain .exhb_reheader .tit_wrap::before { content: ''; width: 673px; height: 285px; position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); background: url(../images/exhb/main_item02.png) no-repeat; background-size: contain; } 
+.exhb_remain .exhb_reheader .tit_wrap h2 { display: inline-block; max-width: 629px; width: 100%; height: 130px; padding-top: 14px; background: url(../images/exhb/main_tit.png) top center no-repeat; background-size: contain; color: #fff; font-size: 52px; font-weight: 900; } 
+.exhb_wrap .innerSection { max-width: 1260px; width: calc(100% - 20px); margin: 0 auto; } 
+.exhb_remain .exhb_job { background: #fff; } 
+.exhb_remain .exhb_job .innerSection { padding: 100px 0 50px; } 
+.exhb_remain .exhb_job .job_list { display: flex; margin-bottom: 50px; flex-wrap: wrap; gap: 30px; } 
+.exhb_remain .exhb_job .job_list .item { width: calc(100% / 3 - 20px); } 
+.exhb_remain .exhb_job .job_list .item.end .img_wrap::before { content: '마감'; display: flex; width: 100%; height: 100%; position: absolute; top: 0; left: 0; background: rgba(0, 0, 0, 0.7); color: #fff; font-size: 40px; font-weight: 700; align-items: center; justify-content: center; } 
+.exhb_remain .exhb_job .job_list a { display: block; } 
+.exhb_remain .exhb_job .job_list .img_wrap { height: 170px; position: relative; border-radius: 15px; overflow: hidden; } 
+.exhb_remain .exhb_job .job_list .img_wrap img { width: 100%; height: 100%; } 
+.exhb_remain .exhb_job .job_list .txt_wrap { padding: 20px 10px; } 
+.exhb_remain .exhb_job .job_list .txt_wrap .prog { font-size: 14px; font-weight: 500; } 
+.exhb_remain .exhb_job .job_list .txt_wrap .prog.st1 { color: #00a8cd; } 
+.exhb_remain .exhb_job .job_list .txt_wrap .prog.st2 { color: #adadad; } 
+.exhb_remain .exhb_job .job_list .txt_wrap .tit { display: block; margin: 8px 0; color: #000; font-size: 16px; font-weight: 500; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; } 
+.exhb_remain .exhb_job .job_list a:hover .txt_wrap .tit { text-decoration: underline; } 
+.exhb_remain .exhb_job .job_list .txt_wrap ul li { display: block; color: #777777; font-size: 14px; font-weight: 300; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; } 
+.exhb_wrap .paging { margin: 24px 0; text-align: center; } 
+.exhb_wrap .paging a { display: inline-block; color: #6b6b6b; padding: 4px; font-size: 16px; } 
+.exhb_wrap .paging a + a { margin-left: 20px; } 
+.exhb_wrap .paging a.current { font-weight: 700; border-bottom: 2px solid #000; color: #000; } 
+.exhb_wrap .mpaging { display: none; } 
+.exhb_wrap .exhb_cst {background: #fff; } 
+.exhb_wrap .exhb_cst .innerSection {padding: 50px 0 100px; } 
+.exhb_wrap .exhb_cst .tit_wrap {margin-bottom: 86px;text-align: center; } 
+.exhb_wrap .exhb_cst .tit_wrap h3 {margin-bottom: 10px;color: #000;font-size: 30px;font-weight: 900; } 
+.exhb_wrap .exhb_cst .tit_wrap p {color: #000;font-size: 18px;font-weight: 300; letter-spacing: -1px;} 
+.exhb_wrap .exhb_cst .ctr_list .swiper-wrapper {display: flex;flex-wrap: wrap;gap: 30px; } 
+.exhb_wrap .exhb_cst .ctr_list .item {width: calc(100% / 3 - 20px);height: 220px;background-color: #f1f1f1;background-position: top 30px right 40px;background-repeat: no-repeat;border-radius: 20px;box-sizing: border-box; } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide01 {display: flex;padding: 10px;background: #fff;text-align: center;align-items: flex-end;justify-content: center; } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide01 img {height: 100%; } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide02 {background-image: url(../images/exhb/ctr_icon02.png); } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide03 {background-image: url(../images/exhb/ctr_icon03.png); } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide04 {background-image: url(../images/exhb/ctr_icon04.png); } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide05 {background-image: url(../images/exhb/ctr_icon05.png); } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide06 {background-image: url(../images/exhb/ctr_icon06.png); } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide02 {background-image: url(../images/exhb/ctr_icon02.png); } 
+.exhb_wrap .exhb_cst .ctr_list .item:hover a p {color: #fff;transition: all 0.35s; } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide02:hover {background-image: url(../images/exhb/ctr_icon02_on.png);background-color: #3EC9A3;transition: all 0.35s; } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide03:hover {background-image: url(../images/exhb/ctr_icon03_on.png);background-color: #53BCF3;transition: all 0.35s; } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide04:hover {background-image: url(../images/exhb/ctr_icon04_on.png);background-color: #67C42F;transition: all 0.35s; } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide05:hover {background-image: url(../images/exhb/ctr_icon05_on.png);background-color: #766CFD;transition: all 0.35s; } 
+.exhb_wrap .exhb_cst .ctr_list .item.slide06:hover {background-image: url(../images/exhb/ctr_icon06_on.png);background-color: #FFAE00;transition: all 0.35s; } 
+.exhb_wrap .exhb_cst .ctr_list .item a {display: flex;width: 100%;height: 100%;padding: 30px 40px; } 
+.exhb_wrap .exhb_cst .ctr_list .item a p {margin-top: auto;color: #000;font-size: 24px;font-weight: 500;letter-spacing: -0.5px; } 
+/* e:2024.10.22 온라인 채용관 css 추가 */
 
 @media all and (max-width:1260px){
 	.exhb_main .exhb_header .top{padding-left: 0}
@@ -295,9 +347,13 @@
 	.exhb_sub .company_info .ci_cont .bt div:nth-child(1){padding-right: 15px}
 	.exhb_sub .company_info .ci_cont .bt div:nth-child(2){padding-left: 15px}
 	.exhb_sub .company_info .ci_cpn{width: calc(100% - 650px)}
-
 	.exhb_sub .eh_cst .eh_cst_cont .item .ico{width: 146px;height: 146px}
+
+    /* s:2024.10.22 온라인 채용관 css 추가 */
+    .exhb_remain .exhb_reheader .tit_wrap::after {content: none; } 
+    /* e:2024.10.22 온라인 채용관 css 추가 */
 }
+
 
 @media all and (max-width:1024px){
 	.exhb_main .exhb_header .bt > div{width: 100%;}
@@ -335,7 +391,20 @@
 	.exhb_sub .company_info .ci_cpn .logo{margin-left: 0;}
 	.exhb_sub .company_info .ci_cpn .li_tit{order: -1}
 
+    /* s:2024.10.22 온라인 채용관 css 추가 */
+	.exhb_remain .exhb_job .job_list .item {width: calc(100% / 2 - 15px);} 
+	/* e:2024.10.22 온라인 채용관 css 추가 */ 
 }
+
+/* s:2024.10.22 온라인 채용관 css 추가 */
+@media all and (max-width:860px) {
+    .exhb_remain .exhb_reheader .tit_wrap {padding: 60px 0; } 
+    .exhb_remain .exhb_reheader .tit_wrap h2 {max-width: 450px;height: 93px;font-size: 32px; } 
+    .exhb_remain .exhb_reheader .tit_wrap::before {width: 450px;height: 191px; } 
+    .exhb_remain .exhb_job .innerSection {padding: 50px 0; } 
+    .exhb_wrap .exhb_cst .ctr_list .swiper-wrapper {flex-wrap: initial;gap: initial; } 
+}
+/* e:2024.10.22 온라인 채용관 css 추가 */
 
 @media all and (max-width:768px){
 	.exhb_sub_header{height:auto}
@@ -425,6 +494,34 @@
 	.exhb_sub .open_other_list .date{position: static}
 	.exhb_sub .open_other_list .support{margin-left: auto;justify-content:flex-end;margin-top: 20px}
 }
+/* s:2024.10.22 온라인 채용관 css 추가 */
+@media all and (max-width:640px) {
+    .exhb_remain .exhb_reheader .tit_wrap {padding: 40px 0; } 
+    .exhb_remain .exhb_reheader .tit_wrap h2 {max-width: 300px;height: 62px;padding-top: 8px;font-size: 22px; } 
+    .exhb_remain .exhb_reheader .tit_wrap::before {width: 280px;height: 119px; } 
+    .exhb_remain .exhb_job {background: #dbeeff; } 
+    .exhb_remain .exhb_job .innerSection {padding: 30px 0; } 
+    .exhb_remain .exhb_job .job_list .img_wrap {display: none; } 
+    .exhb_remain .exhb_job .job_list {margin-bottom: 30px;gap: 10px 0; } 
+    .exhb_remain .exhb_job .job_list .item {width: 100%; } 
+    .exhb_remain .exhb_job .job_list a {background: #fff;border-radius: 15px; } 
+    .exhb_remain .exhb_job .job_list .txt_wrap {padding: 15px; } 
+    .exhb_remain .exhb_job .job_list .txt_wrap .prog {font-size: 12px; } 
+    .exhb_remain .exhb_job .job_list .txt_wrap .tit {margin: 4px 0;font-size: 14px; } 
+    .exhb_remain .exhb_job .job_list .txt_wrap ul {padding-top: 8px;border-top: 1px solid #e6e6e6; } 
+    .exhb_remain .exhb_job .job_list .txt_wrap ul li {font-size: 12px; } 
+    .exhb_wrap .exhb_cst .innerSection {padding: 30px 0 50px; } 
+    .exhb_wrap .exhb_cst .tit_wrap h3 {margin-bottom: 4px;font-size: 20px; } 
+    .exhb_wrap .exhb_cst .tit_wrap {margin-bottom: 40px; } 
+    .exhb_wrap .exhb_cst .tit_wrap p {font-size: 14px;word-break: keep-all; } 
+    .exhb_wrap .exhb_cst .ctr_list .item {height: 120px;background-position: top 20px center;background-size: auto 40px; } 
+    .exhb_wrap .exhb_cst .ctr_list .item a {padding: 10px;justify-content: center; } 
+    .exhb_wrap .exhb_cst .ctr_list .item a p {font-size: 16px; } 
+    .exhb_wrap .paging {display: none; } 
+    .exhb_wrap .mpaging {display: block;color: #000;text-align: center; } 
+    .exhb_wrap .mpaging a {display: inline-block;margin: 0 20px;background-color: #003281;color: #fff;font-size: 14px;padding: 4px 16px;border-radius: 4px; } 
+}
+/* e:2024.10.22 온라인 채용관 css 추가 */
 
 @media all and (max-width:480px){
 	.f20{font-size: 14px}
